--- a/markdown/第一篇文章.md
+++ b/markdown/第一篇文章.md
@@ -1,11 +1,12 @@
 ---
-title: mobx 和 mobx-react 入门
+title: 第一篇文章
 tags: React
 top: true
 abbrlink: e13966ac
 date: 2021-11-25 16:18:15
 categories: React
 comments: true
+id: 1
 ---
 
 ## 1.为什么需要状态管理？
